--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -1,8 +1,45 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+ViewData["Title"] = "Home Page";
 }
-
 <div class="text-center">
-    <h1 class="display-4">Welcome to SloveniaTrips</h1>
-    <p>We help each other grow &lt;3</p>
+   <h1 class="display-4">Welcome to SloveniaTrips</h1>
+   <p>We help each other grow &lt;3</p>
+</div>
+<div class="con1">
+   <div class="con2">
+      <div style="border: 1px solid black; width:500px;height:500px;margin-top:10px;float:left">Edin<br>Ćehić<br>Osrednjeslovenska regija<br>Obiskani dogodki: Dražba za umetnine 19.st</div>
+   </div>
+   <div class="con3">
+        <div style="display:flex">
+            <div style="border: 1px solid black; height:75px;width:500px;margin-top:10px;margin-left:150px ">Muzej<br>Ilirska Bistrica<br>30.12.2022 ob 12:30</div>
+            <div style="border: 1px solid red; height:25px;width:30px;margin-top:60px; margin-left:10px;"></div>
+            <div style="border: 1px solid green; height:25px;width:30px;margin-top:60px; margin-left:10px"></div>
+        </div>
+        <div style="display:flex">
+      <div style="border: 1px solid black; height:75px;width:500px;margin-top:10px; margin-left:150px">Galerija<br>Logatec<br>28.11.2022 ob 17:00</div>
+            <div style="border: 1px solid red; height:25px;width:30px;margin-top:60px; margin-left:10px;"></div>
+            <div style="border: 1px solid green; height:25px;width:30px;margin-top:60px; margin-left:10px"></div>
+        </div>
+        <div style="display:flex">
+      <div style="border: 1px solid black; height:75px;width:500px;margin-top:10px; margin-left:150px">Dražba<br>Jesenice<br>20.5.2022 ob 9:30</div>
+            <div style="border: 1px solid red; height:25px;width:30px;margin-top:60px; margin-left:10px;"></div>
+            <div style="border: 1px solid green; height:25px;width:30px;margin-top:60px; margin-left:10px"></div>
+        </div>
+        <div style="display:flex">
+      <div style="border: 1px solid black; height:75px;width:500px;margin-top:10px; margin-left:150px">Lutkovna predstava<br>Tržič<br>5.1.2023 ob 19:15</div>
+            <div style="border: 1px solid red; height:25px;width:30px;margin-top:60px; margin-left:10px;"></div>
+            <div style="border: 1px solid green; height:25px;width:30px;margin-top:60px; margin-left:10px"></div>
+        </div>
+        <div style="display:flex">
+            <div style="border: 1px solid black; height:75px;width:500px;margin-top:10px;margin-left:150px ">Muzej<br>Ilirska Bistrica<br>30.12.2022 ob 12:30</div>
+            <div style="border: 1px solid red; height:25px;width:30px;margin-top:60px; margin-left:10px;"></div>
+            <div style="border: 1px solid green; height:25px;width:30px;margin-top:60px; margin-left:10px"></div>
+        </div>
+        <div style="display:flex">
+      <div style="border: 1px solid black; height:75px;width:500px;margin-top:10px; margin-left:150px">Muzej<br>Razstava avtov v času Jugoslavije<br>5.2.2023 ob 10:30</div>
+            <div style="border: 1px solid red; height:25px;width:30px;margin-top:60px; margin-left:10px;"></div>
+            <div style="border: 1px solid green; height:25px;width:30px;margin-top:60px; margin-left:10px"></div>
+        </div>
+      
+   </div>
 </div>
