--- a/web/Views/Shared/_Layout.cshtml
+++ b/web/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Profile" asp-action="Index"><i class="fa-solid fa-user"></i></a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Region" asp-action="Index"><i class="fa-solid fa-map"></i></a>
+                        </li>
                     </ul>
                 </div>
                 <partial name="_LoginPartial" />
