--- a/web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/web/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,20 +13,71 @@
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+                <input asp-for="Input.Username" class="form-control" autocomplete="Username" aria-required="true" />
+                <label asp-for="Input.Username"></label>
+                <span asp-validation-for="Input.Username" class="text-danger"></span>
+            </div>
+            <br>
+            <div class="form-floating">
+                <input asp-for="Input.FirstName" class="form-control" autocomplete="FirstName" aria-required="true" />
+                <label asp-for="Input.FirstName"></label>
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+            </div>
+            <br>
+            <div class="form-floating">
+                <input asp-for="Input.LastName" class="form-control" autocomplete="LastName" aria-required="true" />
+                <label asp-for="Input.LastName"></label>
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            </div>
+            <br>
+            <div class="form-floating">
+                <input asp-for="Input.Email" class="form-control" autocomplete="email" aria-required="true" />
                 <label asp-for="Input.Email"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
+            <br>
             <div class="form-floating">
                 <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.Password"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
+            <br>
             <div class="form-floating">
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
+            <br>
+             <div class="form-floating">
+                <input asp-for="Input.PhoneNumber" class="form-control" autocomplete="phonenumber" aria-required="true" />
+                <label asp-for="Input.PhoneNumber"></label>
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
+            <br>
+             <div class="form-floating">
+                <input asp-for="Input.DoB" class="form-control" autocomplete="dateofbirth" aria-required="true" />
+                <label asp-for="Input.DoB"></label>
+                <span asp-validation-for="Input.DoB" class="text-danger"></span>
+            </div>
+            <br>
+            <div class="form-floating">
+                <select asp-for="Input.regionID">
+                    <option value="1">Gorenjska Slovenska</option>
+                    <option value="2">Gorizia</option>
+                    <option value="3">South Eastern Slovenia</option>
+                    <option value="4">Carinthia</option>
+                    <option value="5">Inner-kraška</option>
+                    <option value="6">Coastal-kraška</option>
+                    <option value="7">Inner Slovenia</option>
+                    <option value="8">Podravska</option>
+                    <option value="9">Pomurska</option>
+                    <option value="10">	Savinjska</option>
+                    <option value="11">	Lower Posavia</option>
+                    <option value="12">	Zasavska</option>
+                    <span asp-validation-for="Input.regionID" class="text-danger"></span>
+                </select>
+            </div>
+            <br>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
     </div>
