--- a/web/Views/Home/Index.cshtml
+++ b/web/Views/Home/Index.cshtml
@@ -1,10 +1,41 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Hosting;
+@inject IWebHostEnvironment hostingEnvironment;
+
+@{
 ViewData["Title"] = "Home Page";
+var apiUrl = "";
 }
+
+@{
+  if (hostingEnvironment.IsDevelopment())
+  {
+    apiUrl = "https://localhost:7092/api/v1/";
+  }
+  else
+  {
+    apiUrl = "/api/v1/event";
+  }
+}
+
 <div class="text-center">
    <h1 class="display-4">Welcome to SloveniaTrips</h1>
    <p>We help each other grow &lt;3</p>
 </div>
+<div id="event-list">
+
+</div>
+
+@section scripts
+{
+  <script>
+    //check if local host
+    fetch("@apiUrl"+"event")
+      .then(response => response.json())
+      .then(events =>{
+        console.log(events)
+      });
+  </script>
+}
 <div class="con1">
    <div class="con2">
       <div style="border: 1px solid black; width:500px;height:500px;margin-top:10px;float:left">Edin<br>Ćehić<br>Osrednjeslovenska regija<br>Obiskani dogodki: Dražba za umetnine 19.st</div>
